提交渲染框架

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.31)
  
-project (learnopengl_01)
+project (learnopengl_demo)
 
 file(GLOB ASSETS "./assets")
 
@@ -12,6 +12,7 @@ link_directories(${CMAKE_SOURCE_DIR}/lib)
 
 add_subdirectory(src)
 
-add_executable(opengl01 main.cpp glad.c )
+add_executable(demo main.cpp glad.c )
 
-target_link_libraries(opengl01 App glfw3 SHADER opengl32 Camera)
+target_link_libraries(demo opengl32 glfw3 Wrapper App Shader
+                      Model Camera Light Renderer)
