--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,11 @@ add_subdirectory(Application)
 add_subdirectory(shader)
 
 add_subdirectory(camera)
+
+add_subdirectory(light)
+
+add_subdirectory(model)
+
+add_subdirectory(renderer)
+
+add_subdirectory(wrapper)
